--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "description": "",
   "devDependencies": {
     "chai": "^3.5.0",
+    "delegates": "^1.0.0",
     "koa-ejs": "^3.0.0",
     "koa-mount": "^1.3.0",
     "koa-rewrite": "^1.1.1",
