--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "delegates": "^1.0.0",
+    "istanbul": "^0.4.3",
     "koa-ejs": "^3.0.0",
     "koa-mount": "^1.3.0",
     "koa-rewrite": "^1.1.1",
