--- a/package.json
+++ b/package.json
@@ -20,13 +20,10 @@
     "chai": "^3.5.0",
     "cookiejar": "^2.0.6",
     "delegates": "^1.0.0",
-    "istanbul": "^0.4.3",
     "koa-ejs": "^3.0.0",
     "koa-mount": "^1.3.0",
     "koa-rewrite": "^1.1.1",
     "mocha": "^2.4.5",
-    "mocha-multi": "^0.9.0",
-    "mocha-osx-reporter": "^0.1.2",
     "sinon": "^1.17.3",
     "supertest": "^1.2.0"
   },
@@ -47,5 +44,8 @@
     "watch": "multi=\"mocha-osx-reporter=- min=-\" ./node_modules/.bin/mocha --watch --reporter mocha-multi",
     "coverage": "node --harmony_destructuring node_modules/istanbul/lib/cli.js cover node_modules/.bin/_mocha -- -R progress"
   },
-  "version": "0.1.6"
+  "version": "0.1.6",
+  "files": [
+    "lib"
+  ]
 }
