--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "koa-mount": "^1.3.0",
     "koa-rewrite": "^1.1.1",
     "mocha": "^2.4.5",
+    "mocha-generators": "^1.2.0",
     "sinon": "^1.17.3",
     "supertest": "^1.2.0"
   },
