--- a/.eslintrc
+++ b/.eslintrc
@@ -1,35 +1,11 @@
 {
-  "env": {
-    "node": true,
-    "mocha": true,
-    "es6": true
-  },
+  "extends": "airbnb-base",
   "rules": {
-    "array-bracket-spacing": [2, "never"],
-    "block-scoped-var": 2,
-    "brace-style": [2, "1tbs"],
-    "camelcase": [1, {"properties": "never"}],
-    "computed-property-spacing": [2, "never"],
-    "curly": 2,
-    "eol-last": 2,
-    "eqeqeq": [2, "smart"],
-    "max-depth": [1, 3],
-    "max-len": [1, 80],
-    "max-statements": [0, 15],
-    "new-cap": 1,
-    "no-extend-native": 2,
-    "no-spaced-func": 2,
-    "no-mixed-spaces-and-tabs": 2,
-    "no-trailing-spaces": 2,
-    "no-undef": 1,
-    "no-unused-vars": 1,
-    "no-use-before-define": [2, "nofunc"],
-    "object-curly-spacing": [2, "always"],
-    "quotes": [2, "single", "avoid-escape"],
-    "semi": [2, "always"],
-    "keyword-spacing": 2,
-    "key-spacing": 2,
-    "space-before-function-paren": [1, "never"],
-    "space-unary-ops": 2
+    strict: "off",
+    "no-empty": ["error", { "allowEmptyCatch": true }],
+    "no-underscore-dangle": ["warn", { "allowAfterThis": true }],
+    "generator-star-spacing": ["warn", "both"],
+    "no-cond-assign": ["error", "except-parens"],
+    "no-param-reassign": ["error", { "props": false }]
   }
 }
