--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     "chai": "^3.5.0",
     "cookiejar": "^2.0.6",
     "delegates": "^1.0.0",
+    "eslint": "^2.8.0",
+    "eslint-config-airbnb-base": "^1.0.3",
+    "eslint-plugin-import": "^1.5.0",
     "koa-ejs": "^3.0.0",
     "koa-mount": "^1.3.0",
     "koa-rewrite": "^1.1.1",
@@ -42,6 +45,7 @@
   ],
   "scripts": {
     "test": "mocha",
+    "lint": "eslint lib --fix",
     "watch": "multi=\"mocha-osx-reporter=- min=-\" ./node_modules/.bin/mocha --watch --reporter mocha-multi",
     "coverage": "node --harmony_destructuring node_modules/istanbul/lib/cli.js cover node_modules/.bin/_mocha -- -R progress"
   },
