--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint": "^2.8.0",
     "eslint-config-airbnb-base": "^1.0.3",
     "eslint-plugin-import": "^1.5.0",
+    "istanbul": "^0.4.3",
     "koa-ejs": "^3.0.0",
     "koa-mount": "^1.3.0",
     "koa-rewrite": "^1.1.1",
@@ -44,10 +45,9 @@
     "oidc"
   ],
   "scripts": {
-    "test": "mocha",
-    "lint": "eslint lib example test --fix",
-    "watch": "multi=\"mocha-osx-reporter=- min=-\" ./node_modules/.bin/mocha --watch --reporter mocha-multi",
-    "coverage": "node --harmony_destructuring node_modules/istanbul/lib/cli.js cover node_modules/.bin/_mocha -- -R progress"
+    "coverage": "make test-cov",
+    "test": "make test",
+    "lint": "eslint lib example test --fix"
   },
   "version": "0.1.6",
   "files": [
