config cleanup, test cov (#10)
* ease up on the Supported suffix
* claim related interaction tests
* get_bearer cov
* body middleware cleanup

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,7 @@
 {
   "extends": "airbnb-base",
   "rules": {
-    strict: "off",
+    "strict": "off",
     "no-empty": ["error", { "allowEmptyCatch": true }],
     "no-underscore-dangle": ["warn", { "allowAfterThis": true }],
     "generator-star-spacing": ["warn", "both"],
