--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "koa-rewrite": "^1.1.1",
     "mocha": "^2.4.5",
     "mocha-generators": "^1.2.0",
+    "nock": "^8.0.0",
     "sinon": "^1.17.3",
     "supertest": "^1.2.0"
   },
