--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "description": "OpenID Provider (OP) implementation for Node.js OpenID Connect servers.",
   "devDependencies": {
     "chai": "^3.5.0",
+    "co-mocha": "^1.1.2",
     "cookiejar": "^2.0.6",
     "delegates": "^1.0.0",
     "eslint": "^2.8.0",
