--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -7,6 +7,7 @@
     "func-names": "off",
     "prefer-arrow-callback": "off",
     "comma-dangle": "off",
-    "no-unused-expressions": "off"
+    "no-unused-expressions": "off",
+    "import/no-extraneous-dependencies": "off"
   }
 }
