--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "author": "Filip Skokan",
   "homepage": "https://github.com/panva/node-oidc-provider",
   "dependencies": {
-    "base64url": "^1.0.4",
+    "base64url": "^2.0.0",
     "buffer-equals-constant": "^1.0.0",
     "got": "^6.1.1",
     "http-errors": "^1.4.0",
@@ -12,7 +12,7 @@
     "koa-router": "^5.2.3",
     "lodash": "^4.5.0",
     "lru-cache": "^4.0.0",
-    "node-jose": "^0.8.0",
+    "node-jose": "^0.9.0",
     "node-uuid": "^1.4.7",
     "valid-url": "^1.0.9"
   },
@@ -20,11 +20,11 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "co-mocha": "^1.1.2",
-    "cookiejar": "^2.0.6",
+    "cookiejar": "*",
     "delegates": "^1.0.0",
-    "eslint": "^3.0.1",
-    "eslint-config-airbnb-base": "^4.0.0",
-    "eslint-plugin-import": "^1.10.2",
+    "eslint": "*",
+    "eslint-config-airbnb-base": "*",
+    "eslint-plugin-import": "*",
     "istanbul": "^0.4.3",
     "koa-ejs": "^3.0.0",
     "koa-mount": "^1.3.0",
