--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "koa-rewrite": "^1.1.1",
     "mocha": "^2.4.5",
     "mocha-generators": "^1.2.0",
+    "moment": "^2.14.1",
     "nock": "^8.0.0",
     "sinon": "^1.17.3",
     "supertest": "^1.2.0"
