--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "lodash": "^4.5.0",
     "lru-cache": "^4.0.0",
     "node-jose": "^0.9.0",
-    "node-uuid": "^1.4.7",
+    "uuid": "^2.0.2",
     "valid-url": "^1.0.9"
   },
   "description": "OpenID Provider (OP) implementation for Node.js OpenID Connect servers.",
@@ -29,12 +29,12 @@
     "koa-ejs": "^3.0.0",
     "koa-mount": "^1.3.0",
     "koa-rewrite": "^1.1.1",
-    "mocha": "^2.4.5",
+    "mocha": "^3.0.0",
     "mocha-generators": "^1.2.0",
     "moment": "^2.14.1",
     "nock": "^8.0.0",
     "sinon": "^1.17.3",
-    "supertest": "^1.2.0"
+    "supertest": "^2.0.0"
   },
   "main": "lib/index.js",
   "name": "oidc-provider",
