adapter as private prop, async interaction checks

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,13 +1,11 @@
 {
   "extends": "airbnb-base",
   "rules": {
-    "strict": "off",
-    "no-empty": ["error", { "allowEmptyCatch": true }],
-    "no-underscore-dangle": ["warn", { "allowAfterThis": true }],
     "generator-star-spacing": ["warn", "both"],
-    "no-cond-assign": ["error", "except-parens"],
+    "no-empty": ["error", { "allowEmptyCatch": true }],
     "no-param-reassign": ["error", { "props": false }],
     "prefer-rest-params": "off",
-    "prefer-spread": "off"
+    "prefer-spread": "off",
+    "strict": "off"
   }
 }
