--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "lodash": "^4.5.0",
     "lru-cache": "^4.0.0",
     "node-jose": "^0.9.0",
+    "oidc-token-hash": "^1.0.0",
     "uuid": "^2.0.2",
     "valid-url": "^1.0.9"
   },
