--- a/.eslintrc
+++ b/.eslintrc
@@ -4,6 +4,7 @@
     "no-empty": ["error", { "allowEmptyCatch": true }],
     "prefer-rest-params": "off",
     "prefer-spread": "off",
-    "strict": "off"
+    "strict": "off",
+    "no-param-reassign": ["error", { "props": false }]
   }
 }
