--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "dependencies": {
     "base64url": "^2.0.0",
     "buffer-equals-constant": "^1.0.0",
+    "co": "^4.6.0",
     "got": "^6.1.1",
     "http-errors": "^1.4.0",
-    "kcors": "^1.2.1",
-    "koa": "^1.0.0",
-    "koa-body": "^1.2.1",
-    "koa-compose": "^2.3.0",
+    "kcors": "next",
+    "koa": "next",
+    "koa-body": "next",
+    "koa-compose": "next",
     "koa-ejs": "^3.0.0",
-    "koa-router": "^5.2.3",
+    "koa-router": "next",
     "lodash": "^4.5.0",
     "lru-cache": "^4.0.0",
     "node-jose": "^0.9.0",
@@ -22,16 +23,14 @@
   "description": "OpenID Provider (OP) implementation for Node.js OpenID Connect servers.",
   "devDependencies": {
     "chai": "^3.5.0",
-    "co-mocha": "^1.1.2",
     "cookiejar": "*",
     "eslint": "^3.0.0",
     "eslint-config-airbnb-base": "^10.0.0",
     "eslint-plugin-import": "^2.0.1",
     "istanbul": "^0.4.3",
-    "koa-mount": "^1.3.0",
-    "koa-rewrite": "^1.1.1",
+    "koa-mount": "next",
+    "koa-rewrite": "next",
     "mocha": "^3.0.0",
-    "mocha-generators": "^1.2.0",
     "moment": "^2.14.1",
     "nock": "^9.0.2",
     "sinon": "^1.17.3",
@@ -41,7 +40,7 @@
   "name": "oidc-provider",
   "repository": "panva/node-oidc-provider",
   "engines": {
-    "node": ">=4"
+    "node": ">=7"
   },
   "license": "MIT",
   "keywords": [
@@ -62,7 +61,7 @@
     "lint-fix": "eslint lib example test --fix",
     "heroku-postbuild": "npm install mongodb"
   },
-  "version": "1.0.0",
+  "version": "2.0.0",
   "files": [
     "lib"
   ]
