--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "dependencies": {
     "base64url": "^2.0.0",
     "buffer-equals-constant": "^1.0.0",
+    "ejs": "^2.5.2",
     "got": "^6.1.1",
     "http-errors": "^1.4.0",
     "kcors": "^1.2.1",
     "koa": "^1.0.0",
     "koa-body": "^1.2.1",
     "koa-compose": "^2.3.0",
-    "koa-ejs": "^3.0.0",
     "koa-router": "^5.2.3",
     "lodash": "^4.5.0",
     "lru-cache": "^4.0.0",
@@ -28,6 +28,7 @@
     "eslint-config-airbnb-base": "^10.0.0",
     "eslint-plugin-import": "^2.0.1",
     "istanbul": "^0.4.3",
+    "koa-ejs": "^3.0.0",
     "koa-mount": "^1.3.0",
     "koa-rewrite": "^1.1.1",
     "mocha": "^3.0.0",
