--- a/package.json
+++ b/package.json
@@ -61,8 +61,11 @@
     "lint-fix": "eslint lib example test --fix",
     "heroku-postbuild": "npm install mongodb"
   },
-  "version": "2.0.0",
+  "version": "2.0.0-alpha.1.2.0",
   "files": [
     "lib"
-  ]
+  ],
+  "publishConfig": {
+    "tag": "next"
+  }
 }
