--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "http-errors": "^1.4.0",
     "kcors": "^1.2.1",
     "koa": "^1.0.0",
-    "koa-body": "^1.2.1",
     "koa-compose": "^2.3.0",
     "koa-router": "^5.2.3",
     "lodash": "^4.5.0",
     "lru-cache": "^4.0.0",
     "node-jose": "^0.9.0",
     "oidc-token-hash": "^1.0.0",
+    "raw-body": "^2.1.7",
     "uuid": "^3.0.0",
     "valid-url": "^1.0.9"
   },
@@ -23,6 +23,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "co-mocha": "^1.1.2",
+    "koa-body": "^1.2.1",
     "cookiejar": "*",
     "eslint": "^3.0.0",
     "eslint-config-airbnb-base": "^10.0.0",
