--- a/package.json
+++ b/package.json
@@ -24,12 +24,12 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "co-mocha": "^1.1.2",
-    "koa-body": "^1.2.1",
     "cookiejar": "*",
     "eslint": "^3.0.0",
-    "eslint-config-airbnb-base": "^10.0.0",
+    "eslint-config-airbnb-base": "^11.0.0",
     "eslint-plugin-import": "^2.0.1",
     "istanbul": "^0.4.3",
+    "koa-body": "^1.2.1",
     "koa-ejs": "^3.0.0",
     "koa-mount": "^1.3.0",
     "koa-rewrite": "^1.1.1",
@@ -51,8 +51,12 @@
     "openid",
     "connect",
     "provider",
+    "certified",
     "server",
     "oidc",
+    "auth",
+    "authentication",
+    "identity",
     "oauth",
     "oauth2",
     "express",
@@ -65,7 +69,7 @@
     "lint-fix": "eslint lib example test --fix",
     "heroku-postbuild": "npm install mongodb"
   },
-  "version": "1.4.2",
+  "version": "1.5.0",
   "files": [
     "lib"
   ]
