--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,11 @@ language: node_js
 node_js:
   - stable
 script:
-  - make test
+  - make test-travis
 before_script:
   - sudo apt-get install bc
+after_script:
+  - npm install codecov
+  - ./node_modules/.bin/codecov
 notifications:
   email: false
