other koa deps using their koa2 compatible versions

--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "ejs": "^2.5.2",
     "got": "^6.1.1",
     "http-errors": "^1.4.0",
-    "kcors": "next",
+    "kcors": "^2.2.1",
     "koa": "^2.0.1",
-    "koa-compose": "next",
-    "koa-router": "next",
+    "koa-compose": "^3.2.1",
+    "koa-router": "^7.0.1",
     "lodash": "^4.5.0",
     "lru-cache": "^4.0.0",
     "node-jose": "^0.9.0",
@@ -29,10 +29,10 @@
     "eslint-config-airbnb-base": "^11.0.0",
     "eslint-plugin-import": "^2.0.1",
     "istanbul": "next",
-    "koa-body": "next",
+    "koa-body": "^2.0.0",
     "koa-ejs": "^3.0.0",
-    "koa-mount": "next",
-    "koa-rewrite": "next",
+    "koa-mount": "^2.0.0",
+    "koa-rewrite": "^2.1.0",
     "mocha": "^3.0.0",
     "moment": "^2.14.1",
     "nock": "^9.0.2",
