--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "koa-router": "^5.2.3",
     "lodash": "^4.5.0",
     "lru-cache": "^4.0.0",
-    "node-jose": "^0.9.0",
+    "node-jose": "~0.9.0",
     "oidc-token-hash": "^1.0.0",
     "raw-body": "^2.1.7",
     "uuid": "^3.0.0",
@@ -28,13 +28,12 @@
     "eslint": "^3.0.0",
     "eslint-config-airbnb-base": "^11.0.0",
     "eslint-plugin-import": "^2.0.1",
-    "istanbul": "^0.4.3",
+    "istanbul": "~0.4.3",
     "koa-body": "^1.2.1",
     "koa-ejs": "^3.0.0",
     "koa-mount": "^1.3.0",
     "koa-rewrite": "^1.1.1",
     "mocha": "^3.0.0",
-    "mocha-generators": "^1.2.0",
     "moment": "^2.14.1",
     "nock": "^9.0.2",
     "sinon": "^1.17.3",
