--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "lint-fix": "eslint lib example test --fix",
     "heroku-postbuild": "npm install mongodb"
   },
-  "version": "2.0.0-alpha.1.15.2",
+  "version": "2.0.0-pre.0",
   "files": [
     "lib"
   ],
