--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,16 @@
 language: node_js
+dist: trusty
+sudo: false
+addons:
+  apt:
+    packages:
+      - bc
 node_js:
   - lts/argon
   - lts/boron
   - stable
 script:
   - make test-travis
-before_script:
-  - sudo apt-get install bc
 after_script:
   - npm install codecov
   - ./node_modules/.bin/codecov
