--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "eslint": "^3.0.0",
     "eslint-config-airbnb-base": "^11.0.0",
     "eslint-plugin-import": "^2.0.1",
-    "istanbul": "~0.4.3",
+    "istanbul": "^0.4.5",
     "koa-body": "^1.2.1",
     "koa-ejs": "^3.0.0",
     "koa-mount": "^1.3.0",
