sort package.json, pre-commit coverage and lint, fix lint

--- a/package.json
+++ b/package.json
@@ -1,6 +1,48 @@
 {
-  "author": "Filip Skokan <panva.ip@gmail.com>",
+  "name": "oidc-provider",
+  "version": "2.11.2",
+  "description": "OpenID Provider (OP) implementation for Node.js OpenID Connect servers.",
+  "keywords": [
+    "auth",
+    "authentication",
+    "basic",
+    "certified",
+    "config",
+    "connect",
+    "dynamic",
+    "express",
+    "hybrid",
+    "identity",
+    "implicit",
+    "koa",
+    "oauth",
+    "oauth2",
+    "oidc",
+    "openid",
+    "provider",
+    "server"
+  ],
   "homepage": "https://github.com/panva/node-oidc-provider",
+  "license": "MIT",
+  "author": "Filip Skokan <panva.ip@gmail.com>",
+  "files": [
+    "lib"
+  ],
+  "main": "lib/index.js",
+  "repository": "panva/node-oidc-provider",
+  "scripts": {
+    "coverage": "nyc node ./test/run",
+    "heroku-postbuild": "npm install mongodb@^3.0.0",
+    "lint": "eslint lib example test",
+    "lint-fix": "eslint lib example test --fix",
+    "test": "node ./test/run",
+    "update-configuration": "node ./docs/update-configuration && git add docs/configuration.md"
+  },
+  "pre-commit": [
+    "update-configuration",
+    "coverage",
+    "lint"
+  ],
   "dependencies": {
     "base64url": "^2.0.0",
     "debug": "^3.0.0",
@@ -18,7 +60,6 @@
     "raw-body": "^2.1.7",
     "uuid": "^3.0.0"
   },
-  "description": "OpenID Provider (OP) implementation for Node.js OpenID Connect servers.",
   "devDependencies": {
     "chai": "^4.0.0",
     "eslint": "^4.3.0",
@@ -35,49 +76,9 @@
     "sinon": "^4.0.0",
     "supertest": "^3.0.0"
   },
-  "main": "lib/index.js",
-  "name": "oidc-provider",
-  "repository": "panva/node-oidc-provider",
   "engines": {
     "node": ">=8.0.0"
   },
-  "license": "MIT",
-  "keywords": [
-    "openid",
-    "connect",
-    "provider",
-    "certified",
-    "server",
-    "dynamic",
-    "config",
-    "basic",
-    "hybrid",
-    "implicit",
-    "oidc",
-    "auth",
-    "authentication",
-    "identity",
-    "oauth",
-    "oauth2",
-    "express",
-    "koa"
-  ],
-  "scripts": {
-    "coverage": "nyc node ./test/run",
-    "test": "node ./test/run",
-    "lint": "eslint lib example test",
-    "lint-fix": "eslint lib example test --fix",
-    "heroku-postbuild": "npm install mongodb@^3.0.0",
-    "update-configuration": "node ./docs/update-configuration && git add docs/configuration.md"
-  },
-  "pre-commit": [
-    "update-configuration",
-    "test"
-  ],
-  "version": "2.11.2",
-  "files": [
-    "lib"
-  ],
   "nyc": {
     "reporter": [
       "lcov",
