--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   "dependencies": {
     "base64url": "^2.0.0",
     "debug": "^3.1.0",
+    "delegates": "^1.0.0",
     "ejs": "^2.5.2",
     "got": "^8.0.0",
     "http-errors": "^1.4.0",
