--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "node-jose": "^1.0.0",
     "oidc-token-hash": "^3.0.0",
     "raw-body": "^2.3.3",
+    "superstruct": "^0.5.2",
     "uuid": "^3.2.1"
   },
   "devDependencies": {
