--- a/package.json
+++ b/package.json
@@ -44,13 +44,13 @@
     "lint"
   ],
   "dependencies": {
+    "@koa/cors": "^2.2.1",
     "base64url": "^3.0.0",
     "debug": "^3.1.0",
     "delegates": "^1.0.0",
     "ejs": "^2.6.1",
     "got": "^8.3.1",
     "http-errors": "^1.6.3",
-    "kcors": "^2.2.1",
     "koa": "^2.5.1",
     "koa-compose": "^4.0.0",
     "koa-router": "^7.4.0",
