--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "oidc-provider",
-  "version": "3.0.1",
+  "version": "3.0.2",
   "description": "OpenID Provider (OP) implementation for Node.js OpenID Connect servers.",
   "keywords": [
     "auth",
@@ -44,7 +44,7 @@
     "lint"
   ],
   "dependencies": {
-    "base64url": "^2.0.0",
+    "base64-url": "^2.2.0",
     "debug": "^3.1.0",
     "delegates": "^1.0.0",
     "ejs": "^2.6.1",
@@ -57,7 +57,7 @@
     "lodash": "^4.17.10",
     "lru-cache": "^4.1.3",
     "node-jose": "^0.11.0",
-    "oidc-token-hash": "^2.0.0",
+    "oidc-token-hash": "^3.0.0",
     "raw-body": "^2.3.3",
     "uuid": "^3.2.1"
   },
