--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "koa-router": "^7.4.0",
     "lodash": "^4.17.10",
     "lru-cache": "^4.1.3",
+    "nanoid": "^1.0.3",
     "node-jose": "^1.0.0",
     "oidc-token-hash": "^3.0.1",
     "raw-body": "^2.3.3",
@@ -61,6 +62,7 @@
   },
   "devDependencies": {
     "chai": "^4.1.2",
+    "clear-module": "^2.1.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.12.0",
@@ -73,7 +75,8 @@
     "nyc": "^12.0.2",
     "pre-commit": "^1.2.2",
     "sinon": "^6.0.0",
-    "supertest": "^3.1.0"
+    "supertest": "^3.1.0",
+    "timekeeper": "^2.1.2"
   },
   "engines": {
     "node": ">=8.9.0"
