--- a/package.json
+++ b/package.json
@@ -31,18 +31,14 @@
   "main": "lib/index.js",
   "repository": "panva/node-oidc-provider",
   "scripts": {
+    "precommit": "node ./docs/update-configuration && git add docs/configuration.md",
+    "commitmsg": "commitlint -E GIT_PARAMS",
     "coverage": "nyc node ./test/run",
     "heroku-postbuild": "npm install mongodb@^3.0.0",
     "lint": "eslint lib example test",
     "lint-fix": "eslint lib example test --fix",
-    "test": "node ./test/run",
-    "update-configuration": "node ./docs/update-configuration && git add docs/configuration.md"
+    "test": "node ./test/run"
   },
-  "pre-commit": [
-    "update-configuration",
-    "coverage",
-    "lint"
-  ],
   "dependencies": {
     "@koa/cors": "^2.2.1",
     "base64url": "^3.0.0",
@@ -61,11 +57,14 @@
     "uuid": "^3.2.1"
   },
   "devDependencies": {
+    "@commitlint/cli": "^7.0.0",
+    "@commitlint/config-conventional": "^7.0.1",
     "chai": "^4.1.2",
     "clear-module": "^2.1.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^13.0.0",
     "eslint-plugin-import": "^2.12.0",
+    "husky": "^0.14.3",
     "koa-body": "^4.0.0",
     "koa-ejs": "^4.1.1",
     "koa-mount": "^3.0.0",
@@ -80,6 +79,11 @@
   },
   "engines": {
     "node": ">=8.9.0"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   },
   "nyc": {
     "reporter": [
