feat(web_message): add experimental web_message response mode feature
Based on https://tools.ietf.org/html/draft-sakimura-oauth-wmrm-00
response_mode=web_message is a new response mode that uses HTML5 Web
Messaging instead of a redirect for the Authorization Response from the
Authorization Endpoint. It defines two modes: simple mode and relay
mode. Relay mode can be used to protect the response by confining it
within the origins of a resource server and preventing it from being
read by the client.

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "delegates": "^1.0.0",
     "ejs": "^2.6.1",
     "got": "^8.3.1",
+    "jsesc": "^2.5.1",
     "koa": "^2.5.1",
     "koa-router": "^7.4.0",
     "lodash": "^4.17.10",
@@ -67,6 +68,7 @@
     "husky": "^0.14.3",
     "koa-body": "^4.0.0",
     "koa-ejs": "^4.1.1",
+    "koa-helmet": "^4.0.0",
     "koa-mount": "^3.0.0",
     "mocha": "^5.2.0",
     "moment": "^2.22.2",
