--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "lru-cache": "^4.1.3",
     "nanoid": "^1.1.0",
     "node-jose": "^1.0.0",
+    "object-hash": "^1.3.0",
     "oidc-token-hash": "^3.0.1",
     "raw-body": "^2.3.3",
     "uuid": "^3.3.2"
