--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "object-hash": "^1.3.0",
     "oidc-token-hash": "^3.0.1",
     "raw-body": "^2.3.3",
+    "semver": "^5.6.0",
     "uuid": "^3.3.2"
   },
   "devDependencies": {
