--- a/.travis.yml
+++ b/.travis.yml
@@ -4,15 +4,11 @@ sudo: false
 node_js:
   - lts/carbon
   - stable
-install:
-  - travis_retry npm install
-script:
-  - npm run coverage
-after_script:
-  - npm install codecov
-  - ./node_modules/.bin/codecov
+script: npm run coverage
+after_script: npx codecov
 jobs:
   include:
     - stage: Lint
       script: npm run lint
-      node_js: lts/carbon
+      node_js: stable
+      after_script: skip
