refactor: replace koa-router with @koajs alternative
closes #436

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "got": "^9.3.2",
     "jsesc": "^2.5.2",
     "koa": "^2.6.2",
-    "koa-router": "^7.4.0",
+    "koa-trie-router": "^2.1.6",
     "lodash": "^4.17.11",
     "lru-cache": "^5.1.1",
     "nanoid": "^2.0.0",
@@ -58,7 +58,7 @@
     "uuid": "^3.3.2"
   },
   "devDependencies": {
-    "@commitlint/cli": "^7.2.1",
+    "@commitlint/cli": "^7.5.2",
     "@commitlint/config-conventional": "^7.1.2",
     "chai": "^4.2.0",
     "clear-module": "^3.0.0",
@@ -66,14 +66,14 @@
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.14.0",
     "husky": "^1.2.0",
-    "koa-body": "^4.0.4",
+    "koa-body": "^4.0.8",
     "koa-ejs": "^4.1.2",
     "koa-helmet": "^4.0.0",
     "koa-mount": "^4.0.0",
     "mocha": "^5.2.0",
     "moment": "^2.22.2",
     "nock": "^10.0.2",
-    "nyc": "^13.1.0",
+    "nyc": "^13.3.0",
     "sinon": "^7.1.1",
     "supertest": "^3.3.0",
     "timekeeper": "^2.1.2"
