fix: replace router again to fix CORS preflights

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "got": "^9.3.2",
     "jsesc": "^2.5.2",
     "koa": "^2.6.2",
-    "koa-trie-router": "^2.1.6",
+    "koa-compose": "^4.1.0",
     "lodash": "^4.17.11",
     "lru-cache": "^5.1.1",
     "nanoid": "^2.0.0",
@@ -70,6 +70,7 @@
     "koa-ejs": "^4.1.2",
     "koa-helmet": "^4.0.0",
     "koa-mount": "^4.0.0",
+    "koa-router": "^7.4.0",
     "mocha": "^5.2.0",
     "moment": "^2.22.2",
     "nock": "^10.0.2",
