test: updated travis matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,44 @@
-language: node_js
-node_js:
-  - 12.0.0 # min
-  - stable
-before_script: npx patch-package
-script: npm run coverage
-after_script: npx codecov
-jobs:
+matrix:
+  allow_failures:
+    - name: "Test Suite - Nightly build"
+    - name: "Linter"
+    - name: "Test Suite - Windows"
   include:
-    - stage: Lint
-      script: npm run lint
+    - name: Linter
+      language: node_js
       node_js: stable
-      after_script: skip
-      before_script: skip
+      before_script: npx patch-package
+      script: npm run lint
+    - name: "Test Suite + coverage - 12.0.0" #min
+      language: node_js
+      node_js: 12.0.0
+      before_script: npx patch-package
+      script: npm run coverage
+      after_script: npx codecov
+    - name: "Test Suite + coverage - stable"
+      language: node_js
+      node_js: stable
+      before_script: npx patch-package
+      script: npm run coverage
+      after_script: npx codecov
+    - name: "Test Suite - Windows"
+      language: node_js
+      os: windows
+      before_script: npx patch-package
+      script: npm test
+      node_js: node
+    - name: "Test Suite - Nightly build"
+      language: minimal
+      env: NVM_NODEJS_ORG_MIRROR=https://nodejs.org/download/nightly/
+      install:
+        - nvm i node
+        - npm i
+      before_script: npx patch-package
+      script: npm test
     - stage: heroku deploy
       if: branch = master AND type = push
       install: skip
       script: skip
-      after_script: skip
-      before_script: skip
       deploy:
         provider: heroku
         app: guarded-cliffs-8635
@@ -26,5 +47,3 @@ jobs:
       if: branch = master AND type = push
       install: npm install got@^9.0.0 --no-save
       script: node test/trigger_conformance_build.js
-      after_script: skip
-      before_script: skip
