test: remove nock workaround

--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "koa-router": "^7.4.0",
     "mocha": "^6.1.4",
     "moment": "^2.24.0",
-    "nock": "^10.0.6",
+    "nock": "^11.0.0-beta.14",
     "nyc": "^14.1.0",
     "sinon": "^7.3.2",
     "supertest": "^4.0.2",
