example: op.panva.cz with google federated login, only for the advanced

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "main": "lib/index.js",
   "scripts": {
     "coverage": "nyc node ./test/run",
-    "heroku-postbuild": "npm install mongodb@^3.0.0",
+    "heroku-postbuild": "npm install mongodb@^3.0.0 openid-client@^3.0.0",
     "lint": "eslint lib example certification test",
     "lint-fix": "eslint lib example certification test --fix",
     "test": "node ./test/run"
