--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "oidc-provider",
   "version": "6.0.0-beta.0",
-  "description": "OpenID Provider (OP) implementation for Node.js OpenID Connect servers.",
+  "description": "OAuth 2.0 Authorization Server implementation for Node.js with OpenID Connect",
   "keywords": [
     "auth",
     "authentication",
+    "authorization",
     "basic",
     "certified",
     "config",
@@ -15,8 +16,7 @@
     "identity",
     "implicit",
     "koa",
-    "oauth",
-    "oauth2",
+    "oauth 2.0",
     "oidc",
     "openid",
     "provider",
