chore: lock down nock beta

--- a/package.json
+++ b/package.json
@@ -72,7 +72,7 @@
     "koa-router": "^7.4.0",
     "mocha": "^6.2.0",
     "moment": "^2.24.0",
-    "nock": "^11.0.0-beta.28",
+    "nock": "11.0.0-beta.29",
     "nyc": "^14.1.1",
     "sinon": "^7.3.2",
     "supertest": "^4.0.2",
