--- a/package.json
+++ b/package.json
@@ -64,17 +64,17 @@
     "eslint": "^6.1.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
-    "husky": "^3.0.1",
+    "husky": "^3.0.3",
     "koa-body": "^4.1.0",
     "koa-ejs": "^4.2.0",
-    "koa-helmet": "^4.2.0",
+    "koa-helmet": "^4.2.1",
     "koa-mount": "^4.0.0",
     "koa-router": "^7.4.0",
     "mocha": "^6.2.0",
     "moment": "^2.24.0",
-    "nock": "11.0.0-beta.29",
+    "nock": "^11.0.0",
     "nyc": "^14.1.1",
-    "sinon": "^7.3.2",
+    "sinon": "^7.4.1",
     "supertest": "^4.0.2",
     "timekeeper": "^2.2.0"
   },
