ci: test, coverage and conformance locally using github actions

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "debug": "^4.1.1",
     "ejs": "^2.6.2",
     "got": "^9.6.0",
+    "https-pem": "^2.0.0",
     "jsesc": "^2.5.2",
     "koa": "^2.7.0",
     "koa-compose": "^4.1.0",
