--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "timekeeper": "^2.2.0"
   },
   "engines": {
-    "node": ">=12.0.0"
+    "node": "^10.13.0 || >=12.0.0"
   },
   "commitlint": {
     "extends": [
