ci: disable coverage commit status posts

--- a/codecov.yml
+++ b/codecov.yml
@@ -1,12 +1,12 @@
+coverage:
+  status:
+    project: off
+    patch: off
+    changes: off
+
 comment:
   layout: diff
   behavior: once
-
-coverage:
-  status:
-    project: no
-    patch: yes
-    changes: yes
 
 ignore:
   - package.json
