--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -103,15 +103,48 @@ jobs:
             npm install
             npm run ${{ matrix.script }}
 
-  example-deploy:
+  deploy:
     runs-on: ubuntu-latest
     needs:
       - oidc-conformance
+    strategy:
+      matrix:
+        app:
+          - radiant-refuge-93411
+          - powerful-cove-31049
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-ruby@v1
         with:
           ruby-version: 2.x
       - run: gem install dpl
-      - run: dpl --provider=heroku --strategy=git --api-key=${{ secrets.HEROKU_AUTH_TOKEN }} --app=radiant-refuge-93411
-        if: github.event_name == 'push' && github.ref == 'refs/heads/master' && github.repository == 'panva/node-oidc-provider'
+      - if: github.event_name == 'push' && github.ref == 'refs/heads/master' && github.repository == 'panva/node-oidc-provider'
+        run: dpl --provider=heroku --strategy=git --api-key=${{ secrets.HEROKU_AUTH_TOKEN }} --app=${{ matrix.app }}
+
+  fapi-conformance:
+    runs-on: ubuntu-latest
+    needs:
+      - deploy
+    strategy:
+      fail-fast: false
+      matrix:
+        profile:
+          - planName: fapi-rw-id2-test-plan
+            variant: private_key_jwt
+            configuration: ./certification/fapi/pkjwt.json
+          - planName: fapi-rw-id2-test-plan
+            variant: mtls
+            configuration: ./certification/fapi/mtls.json
+    steps:
+      - uses: actions/checkout@master
+      - uses: actions/setup-node@v1
+        with:
+          node-version: 12
+      - run: npm install
+      - name: Run ${{ matrix.profile.variant }} variant
+        run: node certification/fapi/runner
+        env:
+          SUITE_ACCESS_TOKEN: ${{ secrets.FAPI_ACCESS_TOKEN }}
+          PLAN_NAME: ${{ matrix.profile.planName }}
+          VARIANT: ${{ matrix.profile.variant }}
+          CONFIGURATION: ${{ matrix.profile.configuration }}
