ci: dont parallelize fapi certification variants

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -127,6 +127,7 @@ jobs:
       - deploy
     strategy:
       fail-fast: false
+      max-parallel: 1
       matrix:
         profile:
           - planName: fapi-rw-id2-test-plan
