--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -103,15 +103,10 @@ jobs:
             npm install
             npm run ${{ matrix.script }}
 
-  deploy:
+  example-deploy:
     runs-on: ubuntu-latest
     needs:
       - oidc-conformance
-    strategy:
-      matrix:
-        app:
-          - radiant-refuge-93411
-          - powerful-cove-31049
     steps:
       - uses: actions/checkout@master
       - uses: actions/setup-ruby@v1
@@ -119,12 +114,25 @@ jobs:
           ruby-version: 2.x
       - run: gem install dpl
       - if: github.event_name == 'push' && github.ref == 'refs/heads/master' && github.repository == 'panva/node-oidc-provider'
-        run: dpl --provider=heroku --strategy=git --api-key=${{ secrets.HEROKU_AUTH_TOKEN }} --app=${{ matrix.app }}
+        run: dpl --provider=heroku --strategy=git --api-key=${{ secrets.HEROKU_AUTH_TOKEN }} --app=radiant-refuge-93411
+
+  fapi-deploy:
+    runs-on: ubuntu-latest
+    needs:
+      - test
+    steps:
+      - uses: actions/checkout@master
+      - uses: actions/setup-ruby@v1
+        with:
+          ruby-version: 2.x
+      - run: gem install dpl
+      - if: github.event_name == 'push' && github.ref == 'refs/heads/master' && github.repository == 'panva/node-oidc-provider'
+        run: dpl --provider=heroku --strategy=git --api-key=${{ secrets.HEROKU_AUTH_TOKEN }} --app=powerful-cove-31049
 
   fapi-conformance:
     runs-on: ubuntu-latest
     needs:
-      - deploy
+      - fapi-deploy
     strategy:
       fail-fast: false
       max-parallel: 1
@@ -143,6 +151,7 @@ jobs:
           node-version: 12
       - run: npm install
       - name: Run ${{ matrix.profile.variant }} variant
+        if: github.event_name == 'push' && github.ref == 'refs/heads/master' && github.repository == 'panva/node-oidc-provider'
         run: node certification/fapi/runner
         env:
           SUITE_ACCESS_TOKEN: ${{ secrets.FAPI_ACCESS_TOKEN }}
