--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -116,45 +116,45 @@ jobs:
       - if: github.event_name == 'push' && github.ref == 'refs/heads/master' && github.repository == 'panva/node-oidc-provider'
         run: dpl --provider=heroku --strategy=git --api-key=${{ secrets.HEROKU_AUTH_TOKEN }} --app=radiant-refuge-93411
 
-  fapi-deploy:
-    runs-on: ubuntu-latest
-    needs:
-      - test
-    steps:
-      - uses: actions/checkout@master
-      - uses: actions/setup-ruby@v1
-        with:
-          ruby-version: 2.x
-      - run: gem install dpl
-      - if: github.event_name == 'push' && github.ref == 'refs/heads/master' && github.repository == 'panva/node-oidc-provider'
-        run: dpl --provider=heroku --strategy=git --api-key=${{ secrets.HEROKU_AUTH_TOKEN }} --app=powerful-cove-31049
-
-  fapi-conformance:
-    runs-on: ubuntu-latest
-    needs:
-      - fapi-deploy
-    strategy:
-      fail-fast: false
-      max-parallel: 1
-      matrix:
-        profile:
-          - planName: fapi-rw-id2-test-plan
-            variant: private_key_jwt
-            configuration: ./certification/fapi/pkjwt.json
-          - planName: fapi-rw-id2-test-plan
-            variant: mtls
-            configuration: ./certification/fapi/mtls.json
-    steps:
-      - uses: actions/checkout@master
-      - uses: actions/setup-node@v1
-        with:
-          node-version: 12
-      - run: npm install
-      - name: Run ${{ matrix.profile.variant }} variant
-        if: github.event_name == 'push' && github.ref == 'refs/heads/master' && github.repository == 'panva/node-oidc-provider'
-        run: node certification/fapi/runner
-        env:
-          SUITE_ACCESS_TOKEN: ${{ secrets.FAPI_ACCESS_TOKEN }}
-          PLAN_NAME: ${{ matrix.profile.planName }}
-          VARIANT: ${{ matrix.profile.variant }}
-          CONFIGURATION: ${{ matrix.profile.configuration }}
+  # fapi-deploy:
+  #   runs-on: ubuntu-latest
+  #   needs:
+  #     - test
+  #   steps:
+  #     - uses: actions/checkout@master
+  #     - uses: actions/setup-ruby@v1
+  #       with:
+  #         ruby-version: 2.x
+  #     - run: gem install dpl
+  #     - if: github.event_name == 'push' && github.ref == 'refs/heads/master' && github.repository == 'panva/node-oidc-provider'
+  #       run: dpl --provider=heroku --strategy=git --api-key=${{ secrets.HEROKU_AUTH_TOKEN }} --app=powerful-cove-31049
+  #
+  # fapi-conformance:
+  #   runs-on: ubuntu-latest
+  #   needs:
+  #     - fapi-deploy
+  #   strategy:
+  #     fail-fast: false
+  #     max-parallel: 1
+  #     matrix:
+  #       profile:
+  #         - planName: fapi-rw-id2-test-plan
+  #           variant: private_key_jwt
+  #           configuration: ./certification/fapi/pkjwt.json
+  #         - planName: fapi-rw-id2-test-plan
+  #           variant: mtls
+  #           configuration: ./certification/fapi/mtls.json
+  #   steps:
+  #     - uses: actions/checkout@master
+  #     - uses: actions/setup-node@v1
+  #       with:
+  #         node-version: 12
+  #     - run: npm install
+  #     - name: Run ${{ matrix.profile.variant }} variant
+  #       if: github.event_name == 'push' && github.ref == 'refs/heads/master' && github.repository == 'panva/node-oidc-provider'
+  #       run: node certification/fapi/runner
+  #       env:
+  #         SUITE_ACCESS_TOKEN: ${{ secrets.FAPI_ACCESS_TOKEN }}
+  #         PLAN_NAME: ${{ matrix.profile.planName }}
+  #         VARIANT: ${{ matrix.profile.variant }}
+  #         CONFIGURATION: ${{ matrix.profile.configuration }}
