--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "moment": "^2.24.0",
     "nock": "^11.3.2",
     "nyc": "^14.1.1",
+    "paseto": "^0.9.1",
     "sinon": "^7.4.1",
     "supertest": "^4.0.2",
     "timekeeper": "^2.2.0"
