--- a/package.json
+++ b/package.json
@@ -29,20 +29,23 @@
   "author": "Filip Skokan <panva.ip@gmail.com>",
   "files": [
     "lib",
-    "docs/*.md",
-    "recipes/*.md"
+    "types/index.d.ts"
   ],
   "main": "lib/index.js",
+  "types": "types/index.d.ts",
   "scripts": {
     "coverage": "nyc node ./test/run",
     "heroku-postbuild": "npm install mongodb@^3.0.0 openid-client@^3.0.0",
-    "lint": "eslint lib example certification test",
+    "lint": "eslint lib example certification test && dtslint --onlyTestTsNext types",
     "lint-fix": "eslint lib example certification test --fix",
     "test": "node ./test/run"
   },
   "dependencies": {
     "@koa/cors": "^3.0.0",
     "@panva/jose": "^1.8.0",
+    "@types/cookies": "^0.7.2",
+    "@types/koa": "^2.0.49",
+    "@types/node": "^12.7.4",
     "bowser": "^2.5.3",
     "debug": "^4.1.1",
     "ejs": "^2.6.2",
@@ -63,6 +66,7 @@
     "base64url": "^3.0.1",
     "chai": "^4.2.0",
     "clear-module": "^4.0.0",
+    "dtslint": "^0.9.6",
     "eslint": "^6.2.2",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.18.2",
