--- a/package.json
+++ b/package.json
@@ -43,13 +43,13 @@
   "dependencies": {
     "@koa/cors": "^3.0.0",
     "@panva/jose": "^1.9.2",
-    "@types/cookies": "^0.7.3",
     "@types/koa": "^2.0.50",
     "@types/node": "^12.7.8",
     "debug": "^4.1.1",
     "ejs": "^2.7.1",
     "got": "^9.6.0",
     "jsesc": "^2.5.2",
+    "keygrip": "^1.1.0",
     "koa": "^2.8.1",
     "koa-compose": "^4.1.0",
     "lodash": "^4.17.15",
