--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   "scripts": {
     "coverage": "nyc node ./test/run",
     "heroku-postbuild": "npm install mongodb@^3.0.0 openid-client@^3.0.0",
-    "lint": "eslint lib example certification test && dtslint --onlyTestTsNext types",
+    "lint": "eslint lib example certification test && dtslint types",
     "lint-fix": "eslint lib example certification test --fix",
     "test": "node ./test/run"
   },
@@ -83,7 +83,8 @@
     "paseto": "^0.9.1",
     "sinon": "^7.5.0",
     "supertest": "^4.0.2",
-    "timekeeper": "^2.2.0"
+    "timekeeper": "^2.2.0",
+    "typescript": "^3.6.3"
   },
   "engines": {
     "node": "^10.13.0 || >=12.0.0"
